noinst_LIBRARIES = libkstarscomponents.a

libkstarscomponents_a_SOURCES = abstractplanetcomponent.cpp planetcomponent.cpp \
			asteroidscomponent.cpp cometscomponent.cpp \
			suncomponent.cpp mooncomponent.cpp plutocomponent.cpp \
			jupitermoonscomponent.cpp solarsystemcomposite.cpp \
			starcomponent.cpp customcatalogscomponent.cpp deepskycomponent.cpp \
			constellationlinescomponent.cpp constellationnamescomponent.cpp \
			constellationboundarycomponent.cpp milkywaycomponent.cpp \
			coordinategridcomposite.cpp coordinategridcomponent.cpp \
			eclipticcomponent.cpp equatorcomponent.cpp horizoncomponent.cpp \
			singlecomponent.cpp listcomponent.cpp \
			skycomponent.cpp skycomposite.cpp skymapcomposite.cpp 

INCLUDES = -I$(srcdir)/.. -I$(top_srcdir) $(all_includes)

METASOURCES = AUTO
