noinst_LIBRARIES = libkstarscomponents.a

libkstarscomponents_a_SOURCES = singlecomponent.cpp listcomponent.cpp pointlistcomponent.cpp \
			solarsystemsinglecomponent.cpp solarsystemlistcomponent.cpp \
			suncomponent.cpp mooncomponent.cpp plutocomponent.cpp \
			asteroidscomponent.cpp cometscomponent.cpp \
			jupitermoonscomponent.cpp solarsystemcomposite.cpp \
			starcomponent.cpp customcatalogscomponent.cpp deepskycomponent.cpp \
			constellationlinescomponent.cpp constellationnamescomponent.cpp \
			constellationboundarycomponent.cpp milkywaycomponent.cpp \
			coordinategridcomposite.cpp coordinategridcomponent.cpp \
			eclipticcomponent.cpp equatorcomponent.cpp horizoncomponent.cpp \
			skycomponent.cpp skycomposite.cpp skymapcomposite.cpp 

INCLUDES = -I$(srcdir)/.. -I$(top_srcdir) $(all_includes)

METASOURCES = AUTO
