noinst_LIBRARIES = libkstarscomponents.a

libkstarscomponents_a_SOURCES = singlecomponent.cpp listcomponent.cpp pointlistcomponent.cpp \
			solarsystemsinglecomponent.cpp solarsystemlistcomponent.cpp \
			asteroidscomponent.cpp cometscomponent.cpp \
			jupitermoonscomponent.cpp solarsystemcomposite.cpp \
			starcomponent.cpp deepskycomponent.cpp customcatalogcomponent.cpp \
			constellationlinescomposite.cpp constellationlinescomponent.cpp \
			constellationnamescomponent.cpp constellationboundarycomponent.cpp \
			coordinategridcomposite.cpp coordinategridcomponent.cpp \
			eclipticcomponent.cpp equatorcomponent.cpp horizoncomponent.cpp \
			milkywaycomposite.cpp milkywaycomponent.cpp telescopecomponent.cpp \
			skycomponent.cpp skycomposite.cpp skymapcomposite.cpp 

INCLUDES = -I.. -I../tools -I$(srcdir)/.. -I$(top_srcdir) $(all_includes)

METASOURCES = AUTO
