noinst_LIBRARIES = libkstarstools.a

libkstarstools_a_SOURCES = altvstimeui.ui altvstime.cpp wutdialogui.ui wutdialog.cpp astrocalc.cpp modcalcapcoorddlg.ui modcalcazeldlg.ui modcalcdaylengthdlg.ui modcalcgalcoorddlg.ui modcalcgeoddlg.ui modcalcjddlg.ui modcalcprecdlg.ui modcalcsidtimedlg.ui modcalcapcoord.cpp modcalcazel.cpp modcalcdaylength.cpp modcalcgalcoord.cpp modcalcgeodcoord.cpp modcalcjd.cpp modcalcprec.cpp modcalcsidtime.cpp lcgenerator.cpp scriptbuilderui.ui scriptnamedialog.ui optionstreeview.ui argchangeviewoption.ui arglooktoward.ui argsetaltaz.ui argsetgeolocation.ui argsetlocaltime.ui argsetradec.ui argsettrack.ui argtimescale.ui argwaitforkey.ui argwaitfor.ui argzoom.ui  scriptbuilder.cpp scriptfunction.cpp planetviewer.cpp jmoontool.cpp kstarsplotwidget.cpp 

INCLUDES= -I.. $(all_includes)

METASOURCES = AUTO
