noinst_LIBRARIES = libkstarstools.a

libkstarstools_a_SOURCES = altvstimeui.ui altvstime.cpp wutdialogui.ui \
			wutdialog.cpp astrocalc.cpp modcalcapcoorddlg.ui modcalcazeldlg.ui \
			modcalcdaylengthdlg.ui modcalcgalcoorddlg.ui modcalcgeoddlg.ui modcalcjddlg.ui \
			modcalcprecdlg.ui modcalcsidtimedlg.ui modcalcapcoord.cpp modcalcazel.cpp \
			modcalcdaylength.cpp modcalcgalcoord.cpp modcalcgeodcoord.cpp modcalcjd.cpp modcalcprec.cpp \
			modcalcsidtime.cpp lcgenerator.cpp scriptbuilderui.ui scriptnamedialog.ui \
			optionstreeview.ui argchangeviewoption.ui arglooktoward.ui argsetaltaz.ui \
			argsetgeolocation.ui argsetlocaltime.ui argsetradec.ui argsettrack.ui argtimescale.ui \
			argwaitforkey.ui argwaitfor.ui argzoom.ui argexportimage.ui argprintimage.ui \
			argsetcolor.ui argloadcolorscheme.ui scriptbuilder.cpp scriptfunction.cpp \
			planetviewerui.ui planetviewer.cpp jmoontool.cpp kstarsplotwidget.cpp \
			modcalcequinoxdlg.ui modcalcequinox.cpp modcalcplanetsdlg.ui modcalcplanets.cpp \
			modcalceclipticcoordsdlg.ui modcalceclipticcoords.cpp modcalcangdistdlg.ui modcalcangdist.cpp \
			observinglist.cpp observinglistui.ui argstartindi.ui argshutdownindi.ui argswitchindi.ui \
			argsetportindi.ui argsettargetcoordindi.ui argsettargetnameindi.ui argsetactionindi.ui \
			argsetfocusspeedindi.ui argstartfocusindi.ui argsetfocustimeoutindi.ui argsetgeolocationindi.ui \
			argstartexposureindi.ui argsetutcindi.ui argsetframetypeindi.ui argsetscopeactionindi.ui \
			argsetccdtempindi.ui modcalcvlsrdlg.ui modcalcvlsr.cpp argsetfilternumindi.ui \
	obslistwizard.cpp obslistwizard.h obslistwizardui.ui

INCLUDES= -I$(srcdir)/.. -I$(top_srcdir) $(all_includes)

METASOURCES = AUTO
